# disruptorCpp-IPC-Arbitrary-Length-Data

./: .gitignore  CMakeLists.txt  README.md  atomic_print.hpp  common_def.hpp  elapsed_time.hpp  ring_buffer.hpp  ring_buffer_on_shmem.cpp  ring_buffer_on_shmem.hpp  shared_mem_manager.cpp  shared_mem_manager.hpp  wait_strategy.hpp
tests/inter_process/: CMakeLists.txt  consumer.cpp  makeall.sh  mkconsumer.mk  producer.cpp
tests/inter_thread/: CMakeLists.txt  clearShm.sh  inter_thread_test.cpp  makefile
